# napari-unet-assistant

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
src/napari_unet_assistant/: napari.yaml
src/napari_unet_assistant/inference/: predictor.py
src/napari_unet_assistant/io/: loaders.py  pairing.py  writers.py
src/napari_unet_assistant/models/: __init__.py  registry.py  unet.py  unet_old2.py
src/napari_unet_assistant/models/providers/: __init__.py  builtin_unet.py  monai_models.py  nnunet_adapter.py  segmentation_models_pytorch.py
src/napari_unet_assistant/training/: augment.py  datasets.py  losses.py  metrics.py  patching.py  trainer.py  workers.py
src/napari_unet_assistant/utils/: array_utils.py  config.py  qc.py
src/napari_unet_assistant/widgets/: toolbox_widget.py
