[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-unet-assistant"
version = "0.2.0"
description = "a napari plugin for TIFF-based 2D and 3D U-Net segmentation workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Wulin Teo" }
]
keywords = ["napari", "u-net", "segmentation", "annotation", "microscopy", "image analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "napari",
    "numpy",
    "magicgui",
    "qtpy",
    "tifffile",
    "zarr",
    "ome-zarr",
    "dask[array]",
    "torch",
    "torchvision",
]

[project.urls]
Homepage = "https://github.com/wulinteousa2-hash/napari-unet-assistant"
Repository = "https://github.com/wulinteousa2-hash/napari-unet-assistant"
Issues = "https://github.com/wulinteousa2-hash/napari-unet-assistant/issues"

[project.entry-points."napari.manifest"]
napari-unet-assistant = "napari_unet_assistant:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_unet_assistant = ["napari.yaml"]